--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -5,7 +5,7 @@ on:
   pull_request:
   push:
     branches:
-      - olt
+      - main
 
 jobs:
   build:
@@ -137,7 +137,7 @@ jobs:
       - lint
       - test
       - static-analysis
-    if: github.ref == 'refs/heads/olt'
+    if: github.ref == 'refs/heads/main'
     outputs:
       page_url: ${{ steps.deployment.outputs.page_url }}
     permissions:
