--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "prestart": "npm run build",
     "start": "node build/server.js",
     "test": "jest",
+    "test-ci": "jest --ci",
     "build": "tsc",
     "postbuild": "cp package*.json build && cd build && npm ci --production",
     "lint": "tslint -c tslint.json 'src/**/*.ts'"
